# classification-Fashion-MNIST

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
classification_fashion_mnist/: __init__.py  dataset.py  features.py  gabriel.py  gabriel_eda.py  plots.py
classification_fashion_mnist/modeling/: predict.py  train.py
data/interim/: template_matching.csv
data/processed/: circumference_features.csv  test_circumference_features.csv  test_height_features.csv  test_template_matching.csv  test_width_features.csv  train_height_features.csv  train_template_matching.csv  width_features.csv
models/: template_matching.py  v0.01_reference_nn.keras
notebooks/: 0.01-mpj-pca-analysis.ipynb  0.01-wk-kfold.py  1.01-wk-template-matching.ipynb  3.01-mpj-neural-network.ipynb  3.01-mpj-reference-feed-forward-network.ipynb  Attempt on template matching.ipynb  best_model.weights.h5
reports/: Report.docx  report.tex
