[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "classification_fashion_mnist"
version = "0.0.1"
description = "Comparative performance analysis of, implemented from scratch, Decision Tree, feed-forward NN and other models for Fashion-MNIST dataset."
authors = [
  { name = "Maciej Jalocha, Wenzel Keil, Gabriel Circiu" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["classification_fashion_mnist"]
force_sort_within_sections = true
